# qt_puzzle

./: CMakeLists.txt  README.md  main.cpp
include/: clickablelabel.h  slidingpuzzle.h  slidingpuzzlegui.h  slidingpuzzleimageif.h  slidingpuzzletextif.h
src/: clickablelabel.cpp  clipuzzle.cpp  cvpuzzle.cpp  main.cpp  slidingpuzzle.cpp  slidingpuzzlegui.cpp  slidingpuzzlegui.ui  slidingpuzzleimageif.cpp  slidingpuzzletextif.cpp
